--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1698,6 +1698,26 @@
   number = {2}
 }
 
+@article{kellyDroughtCO2Interactions2016,
+  title = {Drought × {{CO2}} Interactions in Trees: A Test of the Low-Intercellular {{CO2}} Concentration ({{Ci}}) Mechanism},
+  shorttitle = {Drought × {{CO2}} Interactions in Trees},
+  author = {Kelly, Jeff W. G. and Duursma, Remko A. and Atwell, Brian J. and Tissue, David T. and Medlyn, Belinda E.},
+  date = {2016},
+  journaltitle = {New Phytologist},
+  volume = {209},
+  pages = {1600--1612},
+  issn = {1469-8137},
+  doi = {10.1111/nph.13715},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.13715},
+  urldate = {2020-12-31},
+  abstract = {Models of tree responses to climate typically project that elevated atmospheric CO2 concentration (eCa) will reduce drought impacts on forests. We tested one of the mechanisms underlying this interaction, the ‘low Ci effect’, in which stomatal closure in drought conditions reduces the intercellular CO2 concentration (Ci), resulting in a larger relative enhancement of photosynthesis with eCa, and, consequently, a larger relative biomass response. We grew two Eucalyptus species of contrasting drought tolerance at ambient and elevated Ca for 6–9 months in large pots maintained at 50\% (drought) and 100\% field capacity. Droughted plants did not have significantly lower Ci than well-watered plants, which we attributed to long-term changes in leaf area. Hence, there should not have been an interaction between eCa and water availability on biomass, and we did not detect one. The xeric species did have higher Ci than the mesic species, indicating lower water-use efficiency, but both species exhibited similar responses of photosynthesis and biomass to eCa, owing to compensatory differences in the photosynthetic response to Ci. Our results demonstrate that long-term acclimation to drought, and coordination among species traits may be important for predicting plant responses to eCa under low water availability.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.13715},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\42QA6FC5\\Kelly et al. - 2016 - Drought × CO2 interactions in trees a test of the.pdf},
+  keywords = {acclimation,drought,elevated atmospheric CO2 concentration,Eucalyptus pilularis,Eucalyptus populnea,plant traits},
+  langid = {english},
+  number = {4}
+}
+
 @article{koike_leaf_2001,
   title = {Leaf Morphology and Photosynthetic Adjustments among Deciduous Broad-Leaved Trees within the Vertical Canopy Profile},
   author = {Koike, Takayoshi and Kitao, Mitsutoshi and Maruyama, Yutaka and Mori, Shigeta and Lei, Thomasi T.},
@@ -2086,6 +2106,24 @@
   number = {4}
 }
 
+@article{liVariationLeafChlorophyll2018,
+  title = {Variation in Leaf Chlorophyll Concentration from Tropical to Cold-Temperate Forests: {{Association}} with Gross Primary Productivity},
+  shorttitle = {Variation in Leaf Chlorophyll Concentration from Tropical to Cold-Temperate Forests},
+  author = {Li, Ying and Liu, Congcong and Zhang, Jiahui and Yang, Hao and Xu, Li and Wang, Qiufeng and Sack, Lawren and Wu, Xiuqin and Hou, Jihua and He, Nianpeng},
+  date = {2018-02-01},
+  journaltitle = {Ecological Indicators},
+  volume = {85},
+  pages = {383--389},
+  issn = {1470-160X},
+  doi = {10.1016/j.ecolind.2017.10.025},
+  url = {http://www.sciencedirect.com/science/article/pii/S1470160X17306635},
+  urldate = {2020-12-30},
+  abstract = {Leaf chlorophyll is essential to harvest light energy to drive photosynthesis. Yet, most of studies of leaf chlorophyll concentration (Chl) have typically been limited to few species or sites, and there has been little understanding of its variation among species of contrasting environments, or across forests differing in gross primary productivity (GPP). We measured mass-based foliar Chl concentrations (Chl a, Chl b, and total Chl) for 937 species of nine Chinese forests ranging from tropical to cold-temperate regions. Total Chl varied by over ten-fold from 1.45 to 19.2mgg−1 (mean: 5.54mgg−1), and differed among plant functional groups. At the community level, total Chl decreased with increasing latitude. The ratio of Chl a/b decreased from trees to shrubs to herbs, consistent with adaptation to contrasting irradiance, i.e., overstory vs. understory. Total Chl was positively related to leaf N and P concentrations, as would be expected to optimize photosynthesis and carbon fixation. Across forests, GPP was positively correlated with community-averaged Chl (r=0.57; P{$<$}0.01), a new case of a linkage between leaf traits and ecosystem function at regional to continental scale. Our findings revealed variation in Chl from tropical to cold-temperate forests, and the linkage of leaf Chl with ecosystem function, enhancing our ability to parameterize vegetation models.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\C7JI4AH7\\Li et al. - 2018 - Variation in leaf chlorophyll concentration from t.pdf;C\:\\Users\\Me\\Zotero\\storage\\F9XEUG4M\\S1470160X17306635.html;C\:\\Users\\Me\\Zotero\\storage\\PTJ9GBCT\\S1470160X17306635.html},
+  keywords = {Chl,Chlorophyll,Community,Forest,Functional traits,GPP,Nutrients,Photosynthesis,Pigments,Spatial variation,Trait},
+  langid = {english}
+}
+
 @article{liWarmingEffectsPhotosynthesis2016,
   title = {Warming Effects on Photosynthesis of Subtropical Tree Species: A Translocation Experiment along an Altitudinal Gradient},
   shorttitle = {Warming Effects on Photosynthesis of Subtropical Tree Species},
@@ -2233,6 +2271,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\X5WQNDTE\\Maguire and Kobe - 2015 - Drought and shade deplete nonstructural carbohydra.pdf},
   number = {23},
   pmcid = {PMC4813112}
+}
+
+@article{majasalmiImpactTreeCanopy2020,
+  title = {The Impact of Tree Canopy Structure on Understory Variation in a Boreal Forest},
+  author = {Majasalmi, Titta and Rautiainen, Miina},
+  date = {2020-06-15},
+  journaltitle = {Forest Ecology and Management},
+  volume = {466},
+  pages = {118100},
+  issn = {0378-1127},
+  doi = {10.1016/j.foreco.2020.118100},
+  url = {http://www.sciencedirect.com/science/article/pii/S0378112720300372},
+  urldate = {2020-12-31},
+  abstract = {Information on understory composition and its relationships with the overstory tree canopy, especially leaf area index (LAI), is crucially needed in, e.g., modeling land-atmosphere interactions and productivity of forests. There are also several global LAI products produced from satellite data which need to be validated with ground reference data. However, to date, only scarce field data on simultaneous structural properties of under- and overstory vegetation, and tree canopy LAI, have been available in boreal forests. This paper shows how understory composition and fractional cover of different species types varies in a boreal forest site, and how it is linked to structural properties of the tree layer. The study is based on 301 understory plots collected in an area of ∼16 km2 around Hyytiälä forestry field station, Finland (61°50′N, 24°17′E) in a southern boreal forest site. Forest understory plot data was accompanied with measurements of both standard forest inventory variables and optically-based canopy light transmittance data. Clear differences in average species composition between different site fertility types were observed, but also large variation within each site fertility type was noted. Forest understory composition was better correlated with structural forest canopy measures (e.g., tree canopy LAI, canopy cover, canopy openness) than with traditional forest inventory variables such as tree height or diameter. Forest canopy LAI and the fractional cover of understory were strongly related, especially in more fertile sites. Our results highlight the role of tree canopy structural metrics as modifiers of the understory light climate and growing conditions, also, in boreal forests.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\BAD2T9U6\\Majasalmi and Rautiainen - 2020 - The impact of tree canopy structure on understory .pdf},
+  keywords = {Canopy cover,Canopy openness,Forest canopy,Hyytiälä,LAI,Leaf area index,Site fertility},
+  langid = {english}
 }
 
 @article{marquesEFFECTSSUNSHADE1999,
@@ -2653,6 +2708,25 @@
   keywords = {Climate,compound leaves,dispersal syndrome,functional traits,leaf life span,nitrogen fixation,photosynthetic pathway,plant height,plant life span,seed mass,specific leaf area,spinescence},
   langid = {english},
   number = {5}
+}
+
+@article{monsonInteractionsTemperatureIntercellular2016,
+  title = {Interactions between Temperature and Intercellular {{CO2}} Concentration in Controlling Leaf Isoprene Emission Rates},
+  author = {Monson, Russell K. and Neice, Amberly A. and Trahan, Nicole A. and Shiach, Ian and McCorkel, Joel T. and Moore, David J. P.},
+  date = {2016},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {39},
+  pages = {2404--2413},
+  issn = {1365-3040},
+  doi = {10.1111/pce.12787},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/pce.12787},
+  urldate = {2020-12-31},
+  abstract = {Plant isoprene emissions have been linked to several reaction pathways involved in atmospheric photochemistry. Evidence exists from a limited set of past observations that isoprene emission rate (Is) decreases as a function of increasing atmospheric CO2 concentration, and that increased temperature suppresses the CO2 effect. We studied interactions between intercellular CO2 concentration (Ci) and temperature as they affect Is in field-grown hybrid poplar trees in one of the warmest climates on earth – the Sonoran Desert of the southwestern United States. We observed an unexpected midsummer downregulation of Is despite the persistence of relatively high temperatures. High temperature suppression of the Is:Ci relation occurred at all times during the growing season, but sensitivity of Is to increased Ci was greatest during the midsummer period when Is was lowest. We interpret the seasonal downregulation of Is and increased sensitivity of Is to Ci as being caused by weather changes associated with the onset of a regional monsoon system. Our observations on the temperature suppression of the Is:Ci relation are best explained by the existence of a small pool of chloroplastic inorganic phosphate, balanced by several large, connected metabolic fluxes, which together, determine the Ci and temperature dependencies of phosphoenolpyruvate import into the chloroplast.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.12787},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\F8XG5I63\\Monson et al. - 2016 - Interactions between temperature and intercellular.pdf},
+  keywords = {abiotic,hot,model,ozone,photosynthesis,stress,terpene,thermotolerance},
+  langid = {english},
+  number = {11}
 }
 
 @article{montejo-kovacevichMicroclimateBufferingThermal2019,
