--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -110,9 +110,9 @@ These changes are expected to have profound effects on forest biodiversity and e
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@nakamuraForestsTheirCanopies2017; @ozanneBiodiversityMeetsAtmosphere2003] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environments such as temperature, light, wind, humidity and Co2 which influences leaf temperature and metabolism along the gradient.[Bertrand et al. 2011]
 
 The capacity of buffering largly depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions.
-Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000]. Evidence shows that larger trees suffer more than small trees during drought, which may contribute to increasing tree mortality in forests around the world [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a; @mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
+Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a]. Evidence shows that larger trees suffer during drought resulting in heat stressed canopy-leaves, which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to occur [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a; @mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continues evapotranspiration and consequential buffering of the understory [REF]  
 
-While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. As a result, understories experience a different set of microclimatic pressures with rising temperature than overstory [@bartholomewSmallTropicalForest2020]. Since temperature is directly linked with plant metabolic processes and growth, even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. Evidence shows reduced growth of understory trees relative to overstory with warming temperatures, in mesic temperate forests[@rollinsonClimateSensitivityUnderstory, 2020], along with thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[Duque et al. 2015; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering more frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [Niinemetes and Valladares, 2006] which may have further impacts on understory species with rising temperatures. 
+While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. As a result, understories experience a different set of microclimatic pressures, e.g limited light and related foliar traits, inter-species competition etc.. with rising temperature [@bartholomewSmallTropicalForest2020]. Since temperature is directly linked with plant metabolic processes and growth, even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. Evidence shows reduced growth of understory trees relative to overstory with warming temperatures, in mesic temperate forests[@rollinsonClimateSensitivityUnderstory, 2020], along with thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@duqueThermophilizationAdultJuvenile2015; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering more frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [@niinemetsControversyTraitsConferring2006] which may have further impacts on understory species with rising temperatures. 
 Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellPervasiveShiftsForest2020].
 Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
 
@@ -161,24 +161,25 @@ The vertical structure and hence, microenvironments of forest canopies vary seas
 In this review, we focus primarily on growing season conditions, including leaf phenology at the edges of the growing season but excluding periods (in deciduous forests) when no leaves are present.
 
 
-Light conditions, specifically photosynthetically active radiation (PAR) varies along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, across species and forest types [@koike_leaf_2001] due to cumulative layers of vegetation. Generally, upper canopies in dense forests are exposed to greater PAR values and limit light to canopy interiors, lower canopy layers and understories. Shaded regions under canopy cover experience lower values and quality of PAR [in ranges of blue, orange and red]. The gradient of light is more pronounced under broadleaved forests than conifers[@aussenacInteractionsForestStands2000; @niinemetsPackingPhotosyntheticMachinery2009; Parker 1995; @poorterMetaanalysisPlantResponses2019b]
+Light conditions, specifically photosynthetically active radiation (PAR) varies along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, across species and forest types due to cumulative layers of vegetation [@koike_leaf_2001]. Generally, upper canopies in dense forests are exposed to greater PAR values and limit light to canopy interiors, lower canopy layers and understories. Shaded regions under canopy cover experience lower values and quality of PAR [in ranges of blue, orange and red]. The gradient of light is more pronounced under broadleaved forests than conifers[@aussenacInteractionsForestStands2000a; @niinemetsPackingPhotosyntheticMachinery2009; Parker 1995; @poorterMetaanalysisPlantResponses2019b]
 (Fig. `r fig_NEON_vertical`).
 In heterogeneous canopies [with high gap fractions], distance from the outer canopy is a better proxy for light environment than height (Parker 1995) and lower canopy light environments are highly variable, ranging from high light gap to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. 
- Tropical forests with dense overstory limit light to understories and subsequent layers, where tropical forest floors receive approximately 1-2%  of the light incident to the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and Northern temperate forest floors receive around 4-5% of full sunlight [Bartemucci et al. 2005].
-This difference in light regime along a vertical profile is an important driver of plasticity in leaf traits, leaf physiology, adaptation, and thermal sensitivity along the gradient. Leaves along a vertical intra-canopy gradient thus exhibit a variation in leaf trait adapaptions to a range of high light to shaded-ness [@michaletzEnergeticCarbonEconomic2016; @fausetDifferencesLeafThermoregulation2018; @niinemetsResponsesForestTrees2010, @sackHowStrongIntracanopy2006; @doughtyAreTropicalForests2008; Niinemets and Valladares 2006].
+ Tropical forests with dense overstory limit light to understories and subsequent layers, where tropical forest floors receive approximately 1-2%  of the light incident to the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and Northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006].
+This difference in light regime along a vertical profile is an important driver of plasticity in leaf traits, leaf physiology, adaptation, and thermal sensitivity along the gradient. Leaves along a vertical intra-canopy gradient thus exhibit a variation in leaf trait adapaptions to a range of high light to shaded-ness [@michaletzEnergeticCarbonEconomic2016; @fauset_differences_2018; @niinemetsResponsesForestTrees2010, @sackHowStrongIntracanopy2006; @doughtyAreTropicalForests2008; Niinemets and Valladares 2006].
 
 -	Sunflecks: Leaky et al. 2003--from Marielle, "This is another, higher resolution axis of the variability of microenvironments that is probably quite important to address. (Also see the papers by Robin Chazdon on temporal variability of light environments). Maybe we will want to add these sentences (above) and something about sunflecks to a separate section that specifically addresses sources of variation in forest structure & microenvironments (e.g., vertical, horizontal, seasonal, diurnal, and with disturbance)?"
 
 **Wind speeds are also higher at the top of the canopy (Fig. `r fig_NEON_vertical`).**
 *(fill in some specifics from the NEON analysis)*
-Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [Barnard and Bauerle, 2016; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019] in summer months.
+Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [@barnardSeasonalVariationCanopy2016a; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019] in summer months.
+
 Wind speed in the upper canopy of a semi-deciduous tropical forest has been observed to be higher in dry season of than in upper canopy wet season [@rey-sanchez_spatial_2016].[*double check*] 
-Greater upper canopy wind speeds result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with increase in wind velocity [@daudetWindSpeedLeaf1999a]. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$, this is more typical of small leaves in upper canopy that them more advantageous in dissapating heat efficiently than larger leaves[@bauerleSeparatingFoliarPhysiology2011]. In low wind conditions, because $g_{a}$ to heat transfer is small enough, $T_{leaf}$ in upper canopy can become substantially elevated than $T_{air}$ under high radiation [@martin_boundary_1999]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]. 
+Greater upper canopy wind speeds result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with increase in wind velocity [@daudetWindSpeedLeaf1999a]. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$, this is more typical of small leaves in upper canopy that make them more advantageous in dissapating heat efficiently than larger leaves[@bauerleSeparatingFoliarPhysiology2011]. In low wind conditions, because $g_{a}$ to heat transfer is small enough, $T_{leaf}$ in upper canopy can become substantially elevated than $T_{air}$ under high radiation [@martin_boundary_1999]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]. 
 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
-Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019], and recent evidence shows of a similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012] and in the northwestern United States [@davis_microclimatic_2019]. 
+Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019], and recent evidence shows of a similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a] and in the northwestern United States [@davis_microclimatic_2019]. Even though canopy cover buffers maximum air temperatures in the understory, inevitable increase in understory temperatures continue to be observed as a result of global increase in temperatures, however the buffering by canopy cover smoothens this warming in the understory [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020;@rollinsonClimateSensitivityUnderstory]
 
-Diurnal moderating capacity differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures than pine and boreal forests. Increase in crown density and leaf area index decreases light and higher maximum temperature permeability into forest understory, thus maintaining greater lower maximum daytime temperature. Comparitively open forests such as pine forests have sparse stands resulting in decreased buffering capacity in understory and closer air temperatures to nearby clearings [De Frenne et al. 2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reveresed during the night, however, with pine forests maintaining warmer below canopy temperature than above[@vonarxSpatiotemporalEffectsForest2012a] 
+Diurnal moderating capacity differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures than pine and boreal forests. Increase in crown density and leaf area index decreases light and higher maximum temperature permeability into forest understory, thus maintaining greater lower maximum daytime temperature. Comparitively open forests such as pine forests have sparse stands resulting in decreased buffering capacity in understory and closer air temperatures to nearby clearings [@@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reveresed during the night, however, with pine forests maintaining warmer below canopy temperature than above[@vonarxSpatiotemporalEffectsForest2012a] 
 
 Similarly, maximum air temperatures were higher above than below tropical forest canopies during wet seasons in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal Brazil [@fauset_differences_2018, Tymen et al. 2017].
 
@@ -188,7 +189,6 @@ Minimum $T_{air}$ is also buffered by forest canopies under some conditions.
 Higher minimum temperatures under forest canopies relative to nearby clearings have been observed across Europe [@zellweger_seasonal_2019] and in the northwestern United States [@davis_microclimatic_2019].(Martijn: should we refer to mechanisms at this point? (e.g., greater radiative heat loss in exposed areas resulting in lower Tmin))
 However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
 
-[Add something about canopy temperature is a better proxy for determining leaf temperature than air temperature; in wet season leaf temperature can be linked to intensity of irradiance and air temperature, however, in dry season, air temperature better determines leaf temperature due to general increase in irradiance intensity and mixing of air movement along the gradient caused by fewer leaves [rey sanchez et al]]
 
 *(Add something about risk of freeze.)* 
 
@@ -199,7 +199,7 @@ However, similar minimum temperatures under forest canopies have been observed i
 
 Along with temperature, forest canopies moderate relative humidity in below-canopy microclimates. In three European forest types (Broadleaved, Non-Pine Conifer, Pine) canopy buffering decreased daily maximum $T_{air}$ and increased daily minimum RH in below-canopy microclimate compared to a nearby open area. Moderating capacity was stronger under broadleaved and non-pine conifer forests than pine, and greater in wetter conditions, and in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. 
 
-With rising temperatures, this trend in maximum $T_{air}$ and RH would have implications for understory seedling growth, especially in high altitude temperate pine forests and montane forests  [@vonarxSpatiotemporalEffectsForest2012a, @fauset_differences_2018] (to clarify why? are these high elevation forests limited by low temperature and low rh?)  
+With rising temperatures, this trend in maximum $T_{air}$ and RH would have implications for understory seedling growth, especially in high altitude temperate pine forests and montane forests  [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018] (to clarify why? are these high elevation forests limited by low temperature and low rh?)  
 
 RH, in combination with temperature, determines vapor pressure deficit, $VPD$. Atlantic forests during wet season tended to have higher $T_{air}$, and $VPD$ in upper canopy and canopy gaps than lower in understory where $T_{air}$ and $VPD$ were lower [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017].
 This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomtal contrains and lower osmotic potential. [@niinemetsPhotosyntheticAcclimationSimultaneous2004a]
